# GestureRecognitionMPT

./: A_040.npy  A_041.npy  config.yml  converter.py  feature_engineering.py  pyproject.toml  rebuild.py  test.py  train.py  visualize_test.py
B/: B_004.npy  B_015.npy  B_017.npy  B_018.npy  B_030.npy  B_031.npy  B_032.npy  B_033.npy  B_034.npy  B_035.npy  B_036.npy  B_037.npy  B_038.npy  B_039.npy  B_041.npy  B_048.npy  B_049.npy  B_050.npy  B_051.npy  B_052.npy  B_053.npy  B_054.npy  B_055.npy  B_056.npy  B_057.npy  B_058.npy  B_059.npy  B_060.npy  B_061.npy  B_062.npy  B_063.npy  B_064.npy  B_065.npy  B_066.npy  B_067.npy  B_068.npy  B_069.npy  B_070.npy  B_071.npy
GestureRecognition/: demo.py  hmmclassifier.py  labeling.py  main.py  test.py  visualization.py
GestureRecognition/modules/: __init__.py  datarecorder.py  handdetector.py  hiddenmarkov.py  preprocessor.py  trailmarker.py
